# qtbench

./: .gitignore  README.md  pyproject.toml
deepcompressor/: version.py
deepcompressor/app/diffusion/: config.py  eval_metrics.py  ptq.py
deepcompressor/app/diffusion/dataset/: calib.py
deepcompressor/app/diffusion/pipeline/: config.py
deepcompressor/app/diffusion/quant/: config.py  smooth.py
deepcompressor/app/llm/quant/: dataset.py
deepcompressor/calib/: smooth.py
deepcompressor/calib/config/: search.py  smooth.py
deepcompressor/csrc/: load.pyi
deepcompressor/data/: codebook.py  dtype.py  range.py
deepcompressor/data/utils/: dtype.py  reshape.py  scale.py  shape.py
deepcompressor/dataset/: cache.py
deepcompressor/quantizer/impl/: base.py  scale.py  simple.py
deepcompressor/quantizer/kernel/: __init__.py  lzs.py
docs/: QuaRTZ.md
examples/diffusion/: evidence.ipynb  investigate.ipynb  main_fig.ipynb  parse_results.ipynb  paths.txt  run_flux.1-dev_exp.sh  run_flux.1-schnell_exp.sh  run_pixart-sigma_exp.sh
examples/diffusion/configs/: __default__.yaml  int4.yaml  reverse_smooth.yaml  smooth.yaml
examples/diffusion/configs/base/: conv.yaml  dmq.yaml  dmq_conv.yaml  int4.yaml  lab.yaml  mxfp4.yaml  nf4.yaml  nvfp4.yaml
examples/diffusion/configs/model/: flux.1-schnell.yaml  pixart-sigma.yaml  sdxl-turbo.yaml  sdxl.yaml
examples/diffusion/configs/quartz/: __default__.yaml  int4.yaml  int4_all.yaml  int4_cint.yaml  int4_sint.yaml  int4_uint.yaml  int6.yaml  lab.yaml  quartz_int4.yaml  quartz_int4_rev_smooth.yaml  quartz_int4_smooth.yaml  quartz_int6.yaml  smooth.yaml
examples/diffusion/final_result/: ablation-smoothing_forward-w_4_rtn_g64-a_4_rtn_g64_lzs_g32  ablation-smoothing_none-w_4_rtn_g64-a_4_rtn_g64  ablation-smoothing_reverse-w_4_rtn_g64-a_4_rtn_g64_lzs_g32
(+5 files in other folders)
