[tool.poetry]
name = "deepcompressor-toolkit"
version = "0.0.3"
description = "This package is model compression toolkit for large language models and diffusion models."
authors = [
    "Yujun Lin",
    "Muyang Li",
    "Shang Yang",
    "Zhekai Zhang",
    "Haotian Tang",
    "Song Han",
]
packages = [ { include = "deepcompressor" } ]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10 < 4.0"
torch = { version = ">= 2.7.0 < 2.8.0", source = "pytorch_cu128" }
transformers = ">= 4.52.0 <= 4.53.2"
diffusers = ">= 0.33.0 <= 0.34.0"
lm_eval = ">= 0.4.8 < 0.4.9"
omniconfig = ">= 0.1.10 < 0.2.0"
tqdm = "*"
torchvision = "*"
torchmetrics = "*"
ninja = "*"
accelerate = "< 2.0.0"
datasets = "< 4.0.0"
sentencepiece = "*"
jieba = "*"
fuzzywuzzy = "*"
rouge = "*"
python-Levenshtein = "*"
protobuf = "*"
clean-fid = "*"
dominate = "*"
opencv-python  = "*"
einops = "*"
timm = "*"
rotary-embedding-torch = "*"
bs4 = "*"
ftfy = "*"
xformers = "*"
clip = "*"
image_reward = { git = "https://github.com/THUDM/ImageReward.git", branch = "main" }

[[tool.poetry.source]]
name = "pytorch_cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
matplotlib = "*"
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
